// Java package specifiers
option java_package = "com.basho.riak.protobuf";
option java_outer_classname = "AntidotePB";


enum CRDT_type {
    COUNTER = 3;
    ORSET = 4;
    LWWREG = 5;
    MVREG = 6;
    GMAP = 8;
    RWSET = 10;
    RRMAP = 11;
    FATCOUNTER = 12;
    FLAG_EW = 13;
    FLAG_DW = 14;
    TOPK = 1;
    TOPK_RMV = 2;
    AVG = 7;
    LEADERBOARD = 9;
    MAXMIN = 0;
    ORMAP = 15;
}

// Riak Error response
message ApbErrorResp {
    required bytes errmsg = 1;
    required uint32 errcode = 2;
}

//------------------
// Counter

// Counter increment request
message ApbCounterUpdate {
    // inc indicates the value to be incremented. To decrement, use a negative value. If no value is given, it will be considered as an increment by 1
    optional sint64 inc = 1;
}

// Response operation
message ApbGetCounterResp {
    required sint32 value = 1;
}


//------------------
// Set

// Set updates request
message ApbSetUpdate{
    enum SetOpType // TODO merge adds/removes
    {
        ADD = 1;
        REMOVE = 2;
    }
    required SetOpType optype = 1;
    repeated bytes adds = 2;
    repeated bytes rems = 3;
}

// Get set request
message ApbGetSetResp {
    repeated bytes value = 1;
}

//------------------
// LWW-register

// Register update
message ApbRegUpdate {
    required bytes value = 1;
}

// Response operation
message ApbGetRegResp {
    required bytes value = 1;
}

//------------------
// MV-register

// use ApbRegUpdate for updates

// response:
message ApbGetMVRegResp {
    repeated bytes values = 1;
}

//------------------
// Map


message ApbMapKey {
    required bytes key = 1;
    required CRDT_type type = 2;
}

message ApbMapUpdate {
    repeated ApbMapNestedUpdate updates = 1;
    repeated ApbMapKey removedKeys = 2;
}

message ApbMapNestedUpdate {
    required ApbMapKey key = 1;
    required ApbUpdateOperation update = 2;
}

message ApbGetMapResp {
    repeated ApbMapEntry entries = 1;
}

message ApbMapEntry {
    required ApbMapKey key = 1;
    required ApbReadObjectResp value = 2;
}

//-------------------
// Flags

message ApbFlagUpdate {
    required bool value = 1;
}

message ApbGetFlagResp {
    required bool value = 1;
}

// General reset operation
message ApbCrdtReset {

}

// Response operation
message ApbOperationResp {
    required bool success = 1;
    optional uint32 errorcode = 2;
}


//--------------------
// Topk and Topk-rmv

// Topk-rmv updates request
message ApbTopkRmvUpdate{
    repeated ApbIntPair adds = 1;
    repeated sint32 rems = 2;
}

//Topk updates request
message ApbTopkUpdate{
	required sint64 playerId = 1;
	required sint64 score = 2;
}

// Value topk/topk-rmv request
/*
message ApbGetTopkResp {
    repeated sint32 values = 1;
}
*/
message ApbGetTopkResp {
	repeated ApbIntPair values = 1;
}

//Holds a (playerId, score) pair
message ApbIntPair {
	required sint32 playerId = 1;
	required sint32 score = 2;
}

//--------------------
// Leaderboard

message ApbLeaderboardUpdate {
	repeated ApbIntPair adds = 1;
    repeated int32 rems = 2;
}

message ApbGetLeaderboardResp {
	repeated int32 values = 1;
}

//--------------------
// Average

message ApbAverageUpdate {
	required int64 value = 1;
	optional int32 nValues = 2;
}

message ApbGetAverageResp {
	required double avg = 1;
}

//--------------------
// MaxMin

message ApbMaxMinUpdate {
    required int64 value = 1;
    required bool isMax = 2;
}

message ApbGetMaxMinResp {
    required int64 value = 1;
}


//--------------------------------------------------------------

// Properties parameters of a transaction
message ApbTxnProperties {
    optional uint32 read_write = 1 ; //default = 0 = read_write, 1 = read_only, 2 = write_only
    optional uint32 red_blue = 2 ; // default = 0 = blue, 1 = red
}

// Object (Key) representation
message ApbBoundObject {
    required bytes key = 1;
    required CRDT_type type = 2;
    required bytes bucket = 3;
}

// Objects to be read
message ApbReadObjects {
    repeated ApbBoundObject boundobjects = 1;
    required bytes transaction_descriptor = 2;
}

// An Object to be updated with specified operation
message ApbUpdateOp {
    required ApbBoundObject boundobject = 1;
    required ApbUpdateOperation operation = 2;
}

message ApbUpdateOperation { // TODO use this above
    optional ApbCounterUpdate counterop = 1;
    optional ApbSetUpdate setop = 2;
    optional ApbRegUpdate regop = 3;
    optional ApbMapUpdate mapop = 5;
    optional ApbCrdtReset resetop = 6;
    optional ApbFlagUpdate flagop = 7;
    optional ApbMaxMinUpdate maxminop = 11;
    optional ApbTopkRmvUpdate topkrmvop = 12;
    optional ApbTopkUpdate topkop = 13;
    optional ApbLeaderboardUpdate leaderboardop = 14;
    optional ApbAverageUpdate avgop = 15;
}

// Objects to be updated
message ApbUpdateObjects {
    repeated ApbUpdateOp updates = 1;
    required bytes transaction_descriptor = 2;
}

// Start Transaction
message ApbStartTransaction {
    optional bytes timestamp = 1;
    optional ApbTxnProperties properties = 2;
}

// Abort Transaction
message ApbAbortTransaction {
    required bytes transaction_descriptor = 1;
}

// Commit Transaction
message ApbCommitTransaction {
    required bytes transaction_descriptor = 1;
}


message ApbStaticUpdateObjects{
    required ApbStartTransaction transaction = 1;
    repeated ApbUpdateOp updates = 2;
}

message ApbStaticReadObjects{
    required ApbStartTransaction transaction = 1;
    repeated ApbBoundObject objects = 2;
}

//Start transaction response
message ApbStartTransactionResp {
    required bool success = 1;
    optional bytes transaction_descriptor = 2;
    optional uint32 errorcode = 3;
}

//Read Objects Response
message ApbReadObjectResp {
    // one of the following:
    optional ApbGetCounterResp counter = 1;
    optional ApbGetSetResp set = 2;
    optional ApbGetRegResp reg = 3;
    optional ApbGetMVRegResp mvreg = 4;
    optional ApbGetMapResp map = 6;
    optional ApbGetFlagResp flag = 7;
    optional ApbGetMaxMinResp maxmin = 12;
    optional ApbGetTopkResp topk = 13;
    optional ApbGetLeaderboardResp leadb = 14;
    optional ApbGetAverageResp avg = 15;

}

message ApbReadObjectsResp {
    required bool success = 1;
    repeated ApbReadObjectResp objects = 2;
    optional uint32 errorcode = 3;
}

// Commit Response
message ApbCommitResp {
    required bool success = 1;
    optional bytes commit_time = 2;
    optional uint32 errorcode = 3;
}

message ApbStaticReadObjectsResp {
    required ApbReadObjectsResp objects = 1;
    required ApbCommitResp committime = 2;
}



//Replica connection
message ApbConnectReplica {
    required int64 id = 1;
}

message ApbConnectReplicaResp {
    repeated int64 knownIDs = 1;
}
